--- a/styles/globals.css
+++ b/styles/globals.css
@@ -149,4 +149,16 @@
       url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
     filter: contrast(220%) brightness(160%) invert(100%);
   }
+  .sound-filter-bg {
+    transform: translateZ(0);
+    outline: 90px solid transparent !important;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    border-radius: 40px;
+    transition: background 0.1s ease-out;
+  }
 }
