--- a/styles/globals.css
+++ b/styles/globals.css
@@ -89,35 +89,27 @@
 }
 
 @layer utilities {
-  .mask-y {
-    --mask: radial-gradient(4.47rem at 50% 6rem, #000 99%, #0000 101%)
-        calc(50% - 4rem) 0/8rem 51% repeat-x,
-      radial-gradient(4.47rem at 50% -4rem, #0000 99%, #000 101%) 50% 2rem/8rem
-        calc(51% - 2rem) repeat-x,
-      radial-gradient(4.47rem at 50% calc(100% - 6rem), #000 99%, #0000 101%)
-        calc(50% - 4rem) 100%/8rem 51% repeat-x,
-      radial-gradient(4.47rem at 50% calc(100% + 4rem), #0000 99%, #000 101%)
-        50% calc(100% - 2rem) / 8rem calc(51% - 2rem) repeat-x;
+  .mask-left-wave {
+    --mask: radial-gradient(147.58px at 198px 50%, #000 99%, #0000 101%) 0
+        calc(50% - 132px) / 100% 264px,
+      radial-gradient(147.58px at -132px 50%, #0000 99%, #000 101%) 66px 50%/100%
+        264px repeat-y;
     -webkit-mask: var(--mask);
     mask: var(--mask);
   }
-  .mask-x {
-    --mask: radial-gradient(17.89px at 24px 50%, #000 99%, #0000 101%) 0
-        calc(50% - 16px) / 51% 32px repeat-y,
-      radial-gradient(17.89px at -16px 50%, #0000 99%, #000 101%) 8px 50% /
-        calc(51% - 8px) 32px repeat-y,
-      radial-gradient(17.89px at calc(100% - 24px) 50%, #000 99%, #0000 101%)
-        100% calc(50% - 16px) / 51% 32px repeat-y,
-      radial-gradient(17.89px at calc(100% + 16px) 50%, #0000 99%, #000 101%)
-        calc(100% - 8px) 50% / calc(51% - 8px) 32px repeat-y;
-    -webkit-mask: var(--mask);
-    mask: var(--mask);
+  .mask-circle {
+    -webkit-mask-image: radial-gradient(
+      ellipse at center,
+      black 40%,
+      transparent 80%
+    );
+    mask-image: radial-gradient(ellipse at center, black 40%, transparent 80%);
   }
   /* radial */
   .grainy-to-left {
     background: radial-gradient(farthest-corner at right, #565656, transparent),
       url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.5' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
-    filter: contrast(350%) brightness(250%);
+    filter: contrast(350%) brightness(300%);
   }
   .grainy-to-left-darken {
     background: radial-gradient(farthest-corner at right, #565656, transparent),
@@ -132,17 +124,22 @@
   .grainy-to-left--dark {
     background: radial-gradient(farthest-corner at right, #565656, transparent),
       url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.5' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
-    filter: contrast(350%) brightness(270%) invert(100%);
+    filter: contrast(350%) brightness(300%) invert(100%);
   }
   .grainy-to-right {
     background: radial-gradient(farthest-corner at left, #565656, transparent),
       url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.5' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
-    filter: contrast(350%) brightness(250%);
+    filter: contrast(350%) brightness(300%);
+  }
+  .grainy-to-right-darken {
+    background: radial-gradient(farthest-corner at left, #565656, transparent),
+      url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.5' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+    filter: contrast(500%) brightness(250%);
   }
   .grainy-to-right--dark {
     background: radial-gradient(farthest-corner at left, #565656, transparent),
       url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.5' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
-    filter: contrast(350%) brightness(270%) invert(100%);
+    filter: contrast(350%) brightness(300%) invert(100%);
   }
   /* linear */
   .grainy-to-left--linear {
