seo config, chunk components needed after interactive, and ssg build for default data collections

--- a/app/globals.css
+++ b/app/globals.css
@@ -86,6 +86,7 @@
     font-feature-settings:
       'rlig' 1,
       'calt' 1;
+    font-display: 'swap';
   }
   progress::-webkit-progress-bar {
     background: transparent;
